LU-2092 Free quota pools before removing quota master proc entry

When quota master proc entry is removed, it reqursively removes
all children entries including quota pool ones, then when quota pools
are freed they try to unregister already not present proc entries and
crash/lockup.
So free pools before unregistering any proc entires.

Change-Id: Ice0be373bacbd54f4863aec92fb2427c7fe27464
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/4191
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>
Reviewed-by: wangdi <di.wang@whamcloud.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>